Added crud for discounts. Created price_check_with_discount api. Updated the api documentation
